# replay-scraper-api

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-railway.yml
app/: main.py
app/api/: deps.py  main.py
app/api/health/: routes.py
app/api/replays/: models.py  routes.py  services.py
app/api/replays/scrape/: models.py  routes.py  services.py
app/core/: auth.py  config.py  exceptions.py  logging.py  middleware.py  models.py  s3.py
docs/: 01-environments.md  02-deployment.md  03-usage.md
scripts/: generate_api_key.py
