[project]
name = "replay-scraper-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.4.0",
    "anticaptchaofficial>=1.0.69",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.120.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.2",
    "types-aioboto3>=15.4.0",
]

[tool.mypy]
python_version = "3.12"
files = ["app/**/*.py"]
exclude = ['(?x)(^|/)ignore_.*\.py$']
plugins = ["pydantic.mypy"]
strict = true

[tool.ruff]
target-version = "py312"
include = ["app/**/*.py"]

[tool.uv]
cache-dir=".cache"
